--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ install:
 
 script:
   - ./vendor/bin/phpunit --configuration ./phpunit.xml.dist
+
+after_success:
+  - travis_retry php vendor/bin/php-coveralls -v
