--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "twig/twig": "^2.10|^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "php-coveralls/php-coveralls": "^2.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
