--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         }
     },
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4|^8.0",
         "twig/twig": "^2.10|^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8",
+        "phpunit/phpunit": "^9",
         "php-coveralls/php-coveralls": "^2.2"
     },
     "minimum-stability": "dev",
